python: add lib deps
Signed-off-by: Alexandru Ardelean <ardeleanalex@gmail.com>

--- a/python/Makefile
+++ b/python/Makefile
@@ -28,7 +28,7 @@ HOST_BUILD_PARALLEL:=1
 PKG_BUILD_DIR:=$(BUILD_DIR)/Python-$(PKG_VERSION)
 HOST_BUILD_DIR:=$(BUILD_DIR_HOST)/Python-$(PKG_VERSION)
 
-PKG_BUILD_DEPENDS:=python/host
+PKG_BUILD_DEPENDS:=libffi/host python/host
 
 include $(INCLUDE_DIR)/host-build.mk
 include $(INCLUDE_DIR)/package.mk
@@ -64,7 +64,7 @@ endef
 
 define Package/python
 $(call Package/python/Default)
-  DEPENDS:=+python-base +libncursesw
+  DEPENDS:=+python-base +libncursesw +libbz2 +libgdbm +libreadline +libsqlite3 +libexpat +libdb47
 endef
 
 define Package/python/description
