python: add some Build/InstallDev rules back
Signed-off-by: Alexandru Ardelean <ardeleanalex@gmail.com>

--- a/python/Makefile
+++ b/python/Makefile
@@ -107,7 +107,19 @@ Hooks/Configure/Pre+=\
 
 define Build/InstallDev
 	$(INSTALL_DIR) $(STAGING_DIR)/mk/
+	$(INSTALL_DIR) $(1)/usr/include/ $(1)/usr/lib/
+	$(INSTALL_DIR) $(1)/usr/lib/python$(PYTHON_VERSION)/
 	$(INSTALL_DATA) ./files/python-package.mk $(STAGING_DIR)/mk/
+	$(CP) \
+		$(PKG_INSTALL_DIR)/usr/include/python$(PYTHON_VERSION) \
+		$(1)/usr/include/
+	$(CP) \
+		$(STAGING_DIR_HOST)/lib/python$(PYTHON_VERSION) \
+		$(PKG_INSTALL_DIR)/usr/lib/libpython$(PYTHON_VERSION).so* \
+		$(1)/usr/lib/
+	$(CP) \
+		$(PKG_INSTALL_DIR)/usr/lib/python$(PYTHON_VERSION)/config \
+		$(1)/usr/lib/python$(PYTHON_VERSION)/
 endef
 
 define PyPackage/python-base/filespec
