python: update MAKE_FLAGS
Signed-off-by: Alexandru Ardelean <ardeleanalex@gmail.com>

--- a/python/Makefile
+++ b/python/Makefile
@@ -71,8 +71,7 @@ define Package/python/description
   This package contains the (almost) full Python install.
 endef
 
-MAKE_FLAGS:=\
-	DESTDIR="$(PKG_INSTALL_DIR)" \
+MAKE_FLAGS+=\
 	CROSS_COMPILE=yes \
 	LD="$(TARGET_CC)" \
 	PGEN=pgen2
