misc: Correct tag spelling PKG_LICENSE_FILES
Signed-off-by: Ted Hess <thess@kitschensync.net>

--- a/php5/Makefile
+++ b/php5/Makefile
@@ -13,8 +13,8 @@ PKG_RELEASE:=1
 
 PKG_MAINTAINER:=W. Michael Petullo <mike@flyn.org>
 
-PKG_LICENSE=PHPv3.01
-PKG_LICENSE_FILE=LICENSE
+PKG_LICENSE:=PHPv3.01
+PKG_LICENSE_FILES:=LICENSE
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
 PKG_SOURCE_URL:=http://www.php.net/distributions/
