python-dns: update PKG_NAME
PKG_NAME should be the name of the actual OpenWRT package, and not
the name of the original package name.

Signed-off-by: Alexandru Ardelean <ardeleanalex@gmail.com>

--- a/python-dns/Makefile
+++ b/python-dns/Makefile
@@ -7,15 +7,16 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=dnspython
+PKG_NAME:=python-dns
 PKG_RELEASE:=1
 PKG_VERSION:=1.12.0
 PKG_SOURCE_URL:=http://www.dnspython.org/kits/$(PKG_VERSION)
 PKG_MD5SUM:=3f2601ef3c8b77fc6d21a9c77a81efeb
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE:=dnspython-$(PKG_VERSION).tar.gz
 PKG_MAINTAINER:=Denis Shulyaka <Shulyaka@gmail.com>
 PKG_LICENSE:=ISC
 PKG_LICENSE_FILES:=LICENSE
+PKG_BUILD_DIR:=$(BUILD_DIR)/dnspython-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
 $(call include_mk, python-package.mk)
