python-dns: add $(eval $(call PyPackage,python-dns))
Should be included by Python packages if they want to run
Python-package-specific build rules.

Signed-off-by: Alexandru Ardelean <ardeleanalex@gmail.com>

--- a/python-dns/Makefile
+++ b/python-dns/Makefile
@@ -43,4 +43,5 @@ define Package/python-dns/install
 		$(1)$(PYTHON_PKG_DIR)
 endef
 
+$(eval $(call PyPackage,python-dns))
 $(eval $(call BuildPackage,python-dns))
