php5: add missing $(SDK)
Signed-off-by: Michael Heimpold <mhei@heimpold.de>

--- a/php5/Makefile
+++ b/php5/Makefile
@@ -226,7 +226,7 @@ else
   CONFIGURE_ARGS+= --without-iconv
 endif
 
-ifneq ($(CONFIG_PACKAGE_php5-mod-json),)
+ifneq ($(SDK)$(CONFIG_PACKAGE_php5-mod-json),)
   CONFIGURE_ARGS+= --enable-json=shared
 else
   CONFIGURE_ARGS+= --disable-json
