python-pip: remove windows binaries
Seem pip comes bundled with some Python libs.

Some more work will be needed to split them out of pip.
For now, some Windows executables are safe to remove.

Signed-off-by: Alexandru Ardelean <ardeleanalex@gmail.com>

--- a/python-pip/Makefile
+++ b/python-pip/Makefile
@@ -40,8 +40,10 @@ define Build/Compile
 	)
 endef
 
+PYTHON_PIP_PKG_DIR:=$(PYTHON_PKG_DIR)/pip-$(PKG_VERSION)-py$(PYTHON_VERSION).egg/pip
 define PyPackage/python-pip/filespec
-+|/usr/lib/python$(PYTHON_VERSION)
++|$(PYTHON_PKG_DIR)
+-|$(PYTHON_PIP_PKG_DIR)/_vendor/distlib/*.exe
 endef
 
 # Backup these files, so that they do not clash with python-setuptools
