--- a/perl/Config.in
+++ b/perl/Config.in
@@ -11,10 +11,10 @@ config PERL_TESTS
 	default n
 	help
 		Include test suites for all perl packages.
-		This will make perl related packages much bigger, so
-		use with care.
 		
-		Note: Test support is still in development. Some tests
-		still fail, others are just missing completely.
+		This will increase the size of perl and related packages
+		considerably.
+		Test support is still in development. Some tests will fail,
+		others are just missing completely.
 
 endmenu
